[gd_scene load_steps=8 format=3 uid="uid://ghoststreamer_main"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_main"]
[ext_resource type="Script" path="res://scripts/StageGenerator.gd" id="9_stagegen"]
[ext_resource type="Script" path="res://scripts/YouTubeChrome.gd" id="10_ytchrome"]
[ext_resource type="Script" path="res://scripts/ScenarioUI.gd" id="11_scenarioui"]
[ext_resource type="PackedScene" path="res://scenes/Player.tscn" id="2_player"]
[ext_resource type="Script" path="res://scripts/HUD.gd" id="3_hud"]
[ext_resource type="Shader" path="res://shaders/vhs_effect.gdshader" id="4_shader"]
[ext_resource type="PackedScene" path="res://Inventory/UI/Inventory.tscn" id="12_inventory"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.3, 0.35, 0.5, 1)
ambient_light_source = 2
ambient_light_color = Color(1.0, 1.0, 1.0, 1)
ambient_light_energy = 0.0
fog_enabled = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1"]
shader = ExtResource("4_shader")
shader_parameter/scanline_intensity = 0.04
shader_parameter/noise_strength = 0.015
shader_parameter/vignette_power = 0.15
shader_parameter/chroma_offset = 0.001

; ---- Root ----
[node name="Main" type="Node3D"]
script = ExtResource("1_main")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

; 薄明かり (チャプターデータで制御)
[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866, -0.35, 0.354, 0, 0.71, 0.7, -0.5, -0.609, 0.612, 0, 10, 0)
light_color = Color(1.0, 1.0, 1.0, 1)
light_energy = 0.0
shadow_enabled = false

; ---- YouTube UI フレーム (layer=20, 最前面) ----
[node name="YouTubeChrome" type="CanvasLayer" parent="."]
layer = 20
script = ExtResource("10_ytchrome")

; ---- 視聴者投票パネル (layer=8) ----
[node name="ScenarioUI" type="CanvasLayer" parent="."]
layer = 8
script = ExtResource("11_scenarioui")

; ---- ステージ生成管理 (ChapterDataから動的生成) ----
[node name="StageGenerator" type="Node" parent="."]
script = ExtResource("9_stagegen")

; ---- プレイヤー (位置はChapterDataから設定) ----
[node name="Player" parent="." instance=ExtResource("2_player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 15)

; ==== HUD (CanvasLayer layer=2) ====
[node name="HUDLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="HUDRoot" type="Control" parent="HUDLayer"]
script = ExtResource("3_hud")
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

; VHSシェーダーオーバーレイ（一時的に無効化）
[node name="VHSOverlay" type="ColorRect" parent="HUDLayer/HUDRoot"]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0)
material = SubResource("ShaderMaterial_1")
mouse_filter = 2

; スケアフラッシュ
[node name="ScareFlash" type="ColorRect" parent="HUDLayer/HUDRoot"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(1, 1, 1, 0)
mouse_filter = 2

; 上部バー: REC / タイムコード / バッテリー
[node name="TopBar" type="HBoxContainer" parent="HUDLayer/HUDRoot"]
anchor_right = 0.75
offset_left = 10.0
offset_top = 52.0
offset_bottom = 88.0
theme_override_constants/separation = 14

[node name="RecLabel" type="Label" parent="HUDLayer/HUDRoot/TopBar"]
text = "● REC"
theme_override_colors/font_color = Color(1, 0.15, 0.15, 1)
theme_override_font_sizes/font_size = 16

[node name="TopSpacer" type="Control" parent="HUDLayer/HUDRoot/TopBar"]
size_flags_horizontal = 3

[node name="TimecodeLabel" type="Label" parent="HUDLayer/HUDRoot/TopBar"]
text = "00:00:00"
theme_override_colors/font_color = Color(1, 1, 1, 0.9)
theme_override_font_sizes/font_size = 15

[node name="BatteryLabel" type="Label" parent="HUDLayer/HUDRoot/TopBar"]
text = " BAT [IIIII] "
theme_override_colors/font_color = Color(0.3, 1, 0.3, 0.9)
theme_override_font_sizes/font_size = 14

; 下部バー: CAM / アイテム数 / 日時
[node name="BottomBar" type="HBoxContainer" parent="HUDLayer/HUDRoot"]
anchor_top = 1.0
anchor_right = 0.75
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -108.0
offset_right = -10.0
theme_override_constants/separation = 12

[node name="CamLabel" type="Label" parent="HUDLayer/HUDRoot/BottomBar"]
text = "CAM 1"
theme_override_colors/font_color = Color(1, 1, 1, 0.8)
theme_override_font_sizes/font_size = 13

[node name="BottomSpacer" type="Control" parent="HUDLayer/HUDRoot/BottomBar"]
size_flags_horizontal = 3

[node name="ItemLabel" type="Label" parent="HUDLayer/HUDRoot/BottomBar"]
text = "VHS  0 / 5"
theme_override_colors/font_color = Color(0.7, 0.85, 1, 0.9)
theme_override_font_sizes/font_size = 14

[node name="BottomSpacer2" type="Control" parent="HUDLayer/HUDRoot/BottomBar"]
size_flags_horizontal = 3

[node name="DateLabel" type="Label" parent="HUDLayer/HUDRoot/BottomBar"]
text = "2026/02/24  23:48"
theme_override_colors/font_color = Color(1, 1, 1, 0.7)
theme_override_font_sizes/font_size = 13

; チャットウィンドウ
[node name="ChatWindow" type="Control" parent="HUDLayer/HUDRoot"]
anchor_left = 0.75
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 88.0
offset_right = 0.0
offset_bottom = -64.0
visible = false
mouse_filter = 2

[node name="ViewersLabel" type="Label" parent="HUDLayer/HUDRoot/ChatWindow"]
anchor_right = 1.0
offset_bottom = 26.0
text = "● LIVE  143 人視聴中"
theme_override_colors/font_color = Color(1, 0.28, 0.28, 1)
theme_override_font_sizes/font_size = 13
horizontal_alignment = 1
visible = false

[node name="ScrollContainer" type="ScrollContainer" parent="HUDLayer/HUDRoot/ChatWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.0
horizontal_scroll_mode = 0

[node name="ChatVBox" type="VBoxContainer" parent="HUDLayer/HUDRoot/ChatWindow/ScrollContainer"]
size_flags_horizontal = 3
theme_override_constants/separation = 2

; ==== ゲーム開始 イントロオーバーレイ (layer=5) ====
[node name="IntroLayer" type="CanvasLayer" parent="."]
layer = 5
visible = false

[node name="IntroRoot" type="Control" parent="IntroLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="IntroBG" type="ColorRect" parent="IntroLayer/IntroRoot"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0, 0.0, 0.02, 0.90)
mouse_filter = 2

[node name="IntroText" type="RichTextLabel" parent="IntroLayer/IntroRoot"]
anchor_left = 0.15
anchor_top = 0.10
anchor_right = 0.85
anchor_bottom = 0.90
bbcode_enabled = true
scroll_active = false
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 17
theme_override_font_sizes/bold_font_size = 19
theme_override_font_sizes/italics_font_size = 15

[node name="SkipHint" type="Label" parent="IntroLayer/IntroRoot"]
anchor_left = 0.0
anchor_top = 0.90
anchor_right = 1.0
anchor_bottom = 1.0
text = "任意のキー / クリックでスキップ"
theme_override_colors/font_color = Color(0.38, 0.38, 0.38, 0.9)
theme_override_font_sizes/font_size = 13
horizontal_alignment = 1
vertical_alignment = 1
mouse_filter = 2

; ---- インベントリ UI (layer=9) ----
[node name="InventoryLayer" type="CanvasLayer" parent="."]
layer = 9
visible = false

[node name="InventoryUI" parent="InventoryLayer" instance=ExtResource("12_inventory")]

; ==== ゲームオーバー / クリアオーバーレイ (layer=10) ====
[node name="OverlayLayer" type="CanvasLayer" parent="."]
layer = 10
visible = false

[node name="Overlay" type="Control" parent="OverlayLayer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0

[node name="BG" type="ColorRect" parent="OverlayLayer/Overlay"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0, 0.0, 0.0, 0.82)

[node name="VBox" type="VBoxContainer" parent="OverlayLayer/Overlay"]
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
theme_override_constants/separation = 24

[node name="CaughtLabel" type="Label" parent="OverlayLayer/Overlay/VBox"]
text = "捕まった..."
theme_override_colors/font_color = Color(1, 0.15, 0.15, 1)
theme_override_font_sizes/font_size = 52
horizontal_alignment = 1
visible = true

[node name="WinLabel" type="Label" parent="OverlayLayer/Overlay/VBox"]
text = "脱出成功！"
theme_override_colors/font_color = Color(0.3, 1, 0.45, 1)
theme_override_font_sizes/font_size = 52
horizontal_alignment = 1
visible = false

[node name="SubLabel" type="Label" parent="OverlayLayer/Overlay/VBox"]
text = ""
theme_override_colors/font_color = Color(0.85, 0.85, 0.85, 1)
theme_override_font_sizes/font_size = 22
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="OverlayLayer/Overlay/VBox"]
text = "もう一度配信する"
theme_override_font_sizes/font_size = 20

[connection signal="pressed" from="OverlayLayer/Overlay/VBox/RetryButton" to="." method="_on_retry_pressed"]
